--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <meta name="author" content="Sol Perato" />
     <link rel="stylesheet" href="./CSS/style.css" />
 
-    <title>Trabajo Practico JS 1</title>
+    <title>Trabajo Practico JS 4</title>
 </head>
 <body>
- <script src="js/1-variables.js"></script>
+ <script src="js/1-ejercicio1.js"></script>
 
 </body>
 </html>
