--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Trabajo Practico JS 4</title>
 </head>
 <body>
- <script src="js/3-ejercicio3.js"></script>
+ <script src="a1tp-ejercicioadicionaltp.js"></script>
 
 </body>
 </html>
